[package]
name = "ozone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
directories = "4.0.1"
once_cell = "1.15.0"
pest = "2.4.0"
pest_derive = "2.4.0"
rustc-hash = "1.1.0"
rustyline = "10.0.0"
zero_copy_stack = { path = "../zero_copy_stack" }
